# ordergrad

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: README.md  benchmark_methods.py  benchmark_runtime_bar.py  logging_utils.py  mc_gradients_continuous.py  mc_gradients_multiarm.py  mc_snr_continuous.py  mc_snr_multiarm.py  monte_carlo_accuracy.py  plot_dimensionality_snr.py  plot_num_arms_snr.py  plot_order_weights.py  plot_reward_cdf_quantile.py  plot_stored_data.py  quantile_estimator_accuracy.py  run_all_experiments.sh  run_all_experiments_fin.sh  run_all_plots.sh  write_experiment_report.py
ordergrad/: __init__.py  jax_backend.py  numpy_backend.py  torch_backend.py
orderstat_reward/: __init__.py  jax_backend.py  numpy_backend.py  torch_backend.py
tests/: test_jax_backend.py  test_lazy_imports.py  test_numpy_exact.py  test_numpy_mc.py  test_torch_backend.py
